--- a/portadas/enlaces/3/style.css
+++ b/portadas/enlaces/3/style.css
@@ -1,3 +1,41 @@
 body{
     background-color: aqua;
 }
+.portada{
+    border: 6px solid #85c1e9;
+    background-color: #abebc6 ;
+    border-radius: 15px;
+    padding: 20px;
+    text-align: center;
+    margin:auto;
+    margin-top: 20px;
+    width: 400px;
+    box-shadow: 0 4px 8px rgb(0, 0, 0);
+}
+.homero img{
+    display: block;
+    margin: auto;
+    max-width: 100%;
+    border: 5px solid #85c1e9;
+    border-radius: 15px;
+    align-items: center;
+    padding:auto;
+    width: 500px;
+    margin-top: 10px;
+}
+.box{
+    margin-left: 20px;
+    border: 6px solid #85c1e9;
+    background-color: #abebc6;
+    border-radius: 10px;
+    padding: 20px;
+    text-align: center;
+    width: 300px;
+    box-shadow: 0 4px 8px rgb(0, 0, 0);
+}
+.box-enlaces{
+    justify-content: center;
+    margin: auto;
+    display: flex;
+    margin-top:20px;
+}
